Fix on mobile, when opening the complete post modal, clicking back goes back

--- a/src/App.css
+++ b/src/App.css
@@ -931,7 +931,6 @@ header {
     gap: 0.5rem;
   }
   .comment.mobile {
-    display: none;
   }
   .mobile {
     gap: 0.5rem;
